--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 PORT=5000
-MONGO_URI="mongodb+srv://yash:Launchpad_123@cluster0.lmpwomg.mongodb.net/aexonic?retryWrites=true&w=majority"
+MONGO_URI=""
 POSTGRES_URI="postgres://postgres:root@localhost:5432/postgres?schema=public"
 JWT_SECRET="my_personal_secret"
+JWT_EXPIRATION="1d"
 
