--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/express": "^5.0.1",
     "@types/node": "^22.14.1",
     "@types/passport": "^1.0.17",
+    "@types/passport-jwt": "^4.0.1",
     "prisma": "^6.6.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
